--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -18,6 +18,7 @@
     "resendCode":"Resend code",
     "newPassword":"New Password",
     "setANewPassword":"Set a new password and confirm it to complete the reset.",
-    "saveNewPassword": "Save new password"
-    
+    "saveNewPassword": "Save new password",
+    "ready" : "Ready",
+    "settings" : "Settings"
 }
