I added a dark theme switch, corrected my bottomSheet, and added a button used in all bottomSheets. I'll make a dark theme in a separate thread

--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -19,6 +19,7 @@
     "newPassword":"New Password",
     "setANewPassword":"Set a new password and confirm it to complete the reset.",
     "saveNewPassword": "Save new password",
-    "ready" : "Ready",
-    "settings" : "Settings"
+    "done" : "Done",
+    "settings" : "Settings",
+    "darkTheme" : "Dark theme"
 }
