--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -19,7 +19,7 @@
     "newPassword":"Новый пароль",
     "setANewPassword":"Задайте новый пароль и подтвердите его для завершения сброса.",
     "saveNewPassword": "Сохранить новый пароль",
-    "ready" : "Готово",
-    "settings" : "Настройки"
-    
+    "done" : "Готово",
+    "settings" : "Настройки",
+    "darkTheme" : "Темная тема"
 }
