added the viewModel where necessary, corrected previous edits on the repository, post sheet is ready

--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -21,5 +21,10 @@
     "saveNewPassword": "Save new password",
     "done" : "Done",
     "settings" : "Settings",
-    "darkTheme" : "Dark theme"
+    "darkTheme" : "Dark theme",
+    "tiraspol": "Tiraspol",
+    "rybnitsa": "Rybnitsa",
+    "all":"All",
+    "my":"My"
+
 }
