--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -25,6 +25,8 @@
     "tiraspol": "Tiraspol",
     "rybnitsa": "Rybnitsa",
     "all":"All",
-    "my":"My"
+    "my":"My",
+    "searchPost":"Search advertisements"
+
 
 }
