--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -25,6 +25,7 @@
     "tiraspol": "Тирасполь",
     "rybnitsa": "Рыбница",
     "all":"Все",
-    "my":"Мои"
+    "my":"Мои",
+    "searchPost":"Поиск объявлений"
 
 }
