the view on the advertising model has changed

--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -26,7 +26,10 @@
     "rybnitsa": "Rybnitsa",
     "all":"All",
     "my":"My",
-    "searchPost":"Search advertisements"
+    "searchPost":"Search advertisements",
+    "advertisements":"Advertisements",
+    "favorite": "Favorite",
+    "account": "Account"
 
 
 }
