add drawer,filter,my adv

--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -29,6 +29,16 @@
     "searchPost":"Поиск объявлений",
     "advertisements":"Объявления",
     "favorite": "Избранное",
-    "account": "Профиль"
+    "account": "Профиль",
+    "filters": "Фильтры",
+    "apply":"Применить",
+    "city" : "Город",
+    "addCity" : "Добавить город",
+    "adPrice":"Цена объявления",
+    "from" : "От",
+    "before" : "До",
+    "notHaveAnyAds":"У вас пока нет объявлений",
+    "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории"
+
 
 }
