--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -29,7 +29,18 @@
     "searchPost":"Search advertisements",
     "advertisements":"Advertisements",
     "favorite": "Favorite",
-    "account": "Account"
+    "account": "Account",
+    "filters": "Filters",
+    "apply":"Apply",
+    "city" : "City",
+    "addCity" : "Add city",
+    "adPrice" : "Ad price",
+    "from" : "From",
+    "before" : "Before",
+    "notHaveAnyAds":"You don't have any ads yet",
+    "notHaveAnyAdsText": "Don't miss the opportunity! Create and publish your ad right now to offer products or services to a wide audience"
+
+
 
 
 }
