--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -38,7 +38,9 @@
     "from" : "От",
     "before" : "До",
     "notHaveAnyAds":"У вас пока нет объявлений",
-    "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории"
+    "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории",
+    "addAdsToFav": "Добавьте объявления в избранное",
+    "YouCanComeBack":"Вы можете вернуться к ним позже"
 
 
 }
