--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -40,7 +40,8 @@
     "notHaveAnyAds":"У вас пока нет объявлений",
     "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории",
     "addAdsToFav": "Добавьте объявления в избранное",
-    "YouCanComeBack":"Вы можете вернуться к ним позже"
+    "YouCanComeBack":"Вы можете вернуться к ним позже",
+    "reset":"Сбросить"
 
 
 }
