--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -40,7 +40,8 @@
     "notHaveAnyAds":"You don't have any ads yet",
     "notHaveAnyAdsText": "Don't miss the opportunity! Create and publish your ad right now to offer products or services to a wide audience",
     "addAdsToFav": "Add ads to favorites",
-    "YouCanComeBack":"You can come back to them later"
+    "YouCanComeBack":"You can come back to them later",
+    "reset":"Reset"
 
 
 
