--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -41,7 +41,8 @@
     "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории",
     "addAdsToFav": "Добавьте объявления в избранное",
     "YouCanComeBack":"Вы можете вернуться к ним позже",
-    "reset":"Сбросить"
+    "reset":"Сбросить",
+    "name" : "Название"
 
 
 }
