--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -37,12 +37,12 @@
     "adPrice" : "Ad price",
     "from" : "From",
     "before" : "Before",
-    "notHaveAnyAds":"You don't have any ads yet",
-    "notHaveAnyAdsText": "Don't miss the opportunity! Create and publish your ad right now to offer products or services to a wide audience",
+    "notHaveAnyAds" : "You dont have any ads yet",
+    "notHaveAnyAdsText":  "Dont miss the opportunity! Create and publish your ad right now to offer products or services to a wide audience",
     "addAdsToFav": "Add ads to favorites",
     "YouCanComeBack":"You can come back to them later",
-    "reset":"Reset"
-
+    "reset":"Reset",
+    "name" : "Name"
 
 
 
