--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -1,49 +1,47 @@
 {
-    "logIn": "Login",
-    "signUp":"Signup",
-    "phone": "Phone",
-    "password":"Password",
-    "toComeIn":"Login",
-    "toComeUp":"Signup",
-    "forgotPassword":"Forgot password",
-    "repeatPassword":"Repeat password",
-    "iAgreeWith": "I agree with",
-    "termsOfUse":"Terms and Conditions of Use",
-    "passwordRecovery": "Password recovery",
-    "enterThePhoneTo": "Enter the phone to which the password reset code will be sent",
-    "send":"Send",
-    "enterACode": "Enter a code",
-    "enterTheCodeSentTo":"Enter the code sent to",
-    "confirm":"Confirm",
-    "resendCode":"Resend code",
-    "newPassword":"New Password",
-    "setANewPassword":"Set a new password and confirm it to complete the reset.",
-    "saveNewPassword": "Save new password",
-    "done" : "Done",
-    "settings" : "Settings",
-    "darkTheme" : "Dark theme",
-    "tiraspol": "Tiraspol",
-    "rybnitsa": "Rybnitsa",
-    "all":"All",
-    "my":"My",
-    "searchPost":"Search advertisements",
-    "advertisements":"Advertisements",
-    "favorite": "Favorite",
-    "account": "Account",
-    "filters": "Filters",
-    "apply":"Apply",
-    "city" : "City",
-    "addCity" : "Add city",
-    "adPrice" : "Ad price",
-    "from" : "From",
-    "before" : "Before",
-    "notHaveAnyAds" : "You dont have any ads yet",
-    "notHaveAnyAdsText":  "Dont miss the opportunity! Create and publish your ad right now to offer products or services to a wide audience",
-    "addAdsToFav": "Add ads to favorites",
-    "YouCanComeBack":"You can come back to them later",
-    "reset":"Reset",
-    "name" : "Name"
-
-
-
+  "logIn": "Login",
+  "signUp": "Signup",
+  "phone": "Phone",
+  "password": "Password",
+  "toComeIn": "Login",
+  "toComeUp": "Signup",
+  "forgotPassword": "Forgot password",
+  "repeatPassword": "Repeat password",
+  "iAgreeWith": "I agree with",
+  "termsOfUse": "Terms and Conditions of Use",
+  "passwordRecovery": "Password recovery",
+  "enterThePhoneTo": "Enter the phone to which the password reset code will be sent",
+  "send": "Send",
+  "enterACode": "Enter a code",
+  "enterTheCodeSentTo": "Enter the code sent to",
+  "confirm": "Confirm",
+  "resendCode": "Resend code",
+  "newPassword": "New Password",
+  "setANewPassword": "Set a new password and confirm it to complete the reset.",
+  "saveNewPassword": "Save new password",
+  "done": "Done",
+  "settings": "Settings",
+  "darkTheme": "Dark theme",
+  "tiraspol": "Tiraspol",
+  "rybnitsa": "Rybnitsa",
+  "all": "All",
+  "my": "My",
+  "searchPost": "Search advertisements",
+  "advertisements": "Advertisements",
+  "favorite": "Favorite",
+  "account": "Account",
+  "filters": "Filters",
+  "apply": "Apply",
+  "city": "City",
+  "addCity": "Add city",
+  "adPrice": "Ad price",
+  "from": "From",
+  "before": "Before",
+  "notHaveAnyAds": "You dont have any ads yet",
+  "notHaveAnyAdsText": "Dont miss the opportunity! Create and publish your ad right now to offer products or services to a wide audience",
+  "addAdsToFav": "Add ads to favorites",
+  "YouCanComeBack": "You can come back to them later",
+  "reset": "Reset",
+  "name": "Name",
+  "description": "Description"
 }
