--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -1,48 +1,47 @@
 {
-    "logIn": "Вход",
-    "signUp":"Регистрация",
-    "phone": "Телефон",
-    "password":"Пароль",
-    "toComeIn":"Войти",
-    "toComeUp":"Зарегистрироваться",
-    "forgotPassword":"Забыли пароль?",
-    "repeatPassword":"Повторите пароль",
-    "iAgreeWith": "Я согласен с",
-    "termsOfUse":"Правилами и условиями использования",
-    "passwordRecovery": "Восстановление пароля",
-    "enterThePhoneTo": "Введите почту, на которую будет отправлен код для сброса пароля",
-    "send":"Отправить",
-    "enterACode": "Введите код",
-    "enterTheCodeSentTo":"Введите код, отправленный на",
-    "confirm":"Подтвердить",
-    "resendCode":"Отправить код повторно",
-    "newPassword":"Новый пароль",
-    "setANewPassword":"Задайте новый пароль и подтвердите его для завершения сброса.",
-    "saveNewPassword": "Сохранить новый пароль",
-    "done" : "Готово",
-    "settings" : "Настройки",
-    "darkTheme" : "Темная тема",
-    "tiraspol": "Тирасполь",
-    "rybnitsa": "Рыбница",
-    "all":"Все",
-    "my":"Мои",
-    "searchPost":"Поиск объявлений",
-    "advertisements":"Объявления",
-    "favorite": "Избранное",
-    "account": "Профиль",
-    "filters": "Фильтры",
-    "apply":"Применить",
-    "city" : "Город",
-    "addCity" : "Добавить город",
-    "adPrice":"Цена объявления",
-    "from" : "От",
-    "before" : "До",
-    "notHaveAnyAds":"У вас пока нет объявлений",
-    "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории",
-    "addAdsToFav": "Добавьте объявления в избранное",
-    "YouCanComeBack":"Вы можете вернуться к ним позже",
-    "reset":"Сбросить",
-    "name" : "Название"
-
-
+  "logIn": "Вход",
+  "signUp": "Регистрация",
+  "phone": "Телефон",
+  "password": "Пароль",
+  "toComeIn": "Войти",
+  "toComeUp": "Зарегистрироваться",
+  "forgotPassword": "Забыли пароль?",
+  "repeatPassword": "Повторите пароль",
+  "iAgreeWith": "Я согласен с",
+  "termsOfUse": "Правилами и условиями использования",
+  "passwordRecovery": "Восстановление пароля",
+  "enterThePhoneTo": "Введите почту, на которую будет отправлен код для сброса пароля",
+  "send": "Отправить",
+  "enterACode": "Введите код",
+  "enterTheCodeSentTo": "Введите код, отправленный на",
+  "confirm": "Подтвердить",
+  "resendCode": "Отправить код повторно",
+  "newPassword": "Новый пароль",
+  "setANewPassword": "Задайте новый пароль и подтвердите его для завершения сброса.",
+  "saveNewPassword": "Сохранить новый пароль",
+  "done": "Готово",
+  "settings": "Настройки",
+  "darkTheme": "Темная тема",
+  "tiraspol": "Тирасполь",
+  "rybnitsa": "Рыбница",
+  "all": "Все",
+  "my": "Мои",
+  "searchPost": "Поиск объявлений",
+  "advertisements": "Объявления",
+  "favorite": "Избранное",
+  "account": "Профиль",
+  "filters": "Фильтры",
+  "apply": "Применить",
+  "city": "Город",
+  "addCity": "Добавить город",
+  "adPrice": "Цена объявления",
+  "from": "От",
+  "before": "До",
+  "notHaveAnyAds": "У вас пока нет объявлений",
+  "notHaveAnyAdsText": "Не упустите возможность! Создайте и опубликуйте своё объявление прямо сейчас, чтобы предложить товары или услуги широкой аудитории",
+  "addAdsToFav": "Добавьте объявления в избранное",
+  "YouCanComeBack": "Вы можете вернуться к ним позже",
+  "reset": "Сбросить",
+  "name": "Название",
+  "description": "Описание"
 }
