ready details, ready account , 50/50 ready edit account, 50/50 unknow acc scren

--- a/lib/core/domain/intl/l10n/intl_en.arb
+++ b/lib/core/domain/intl/l10n/intl_en.arb
@@ -43,5 +43,9 @@
   "YouCanComeBack": "You can come back to them later",
   "reset": "Reset",
   "name": "Name",
-  "description": "Description"
+  "description": "Description",
+  "aboutTheApplication": "About the application",
+  "logOut": "Logout"
+
+
 }
