--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -43,5 +43,8 @@
   "YouCanComeBack": "Вы можете вернуться к ним позже",
   "reset": "Сбросить",
   "name": "Название",
-  "description": "Описание"
+  "description": "Описание",
+  "aboutTheApplication": "О приложении",
+  "logOut":"Выйти"
+
 }
