--- a/lib/core/domain/intl/l10n/intl_ru.arb
+++ b/lib/core/domain/intl/l10n/intl_ru.arb
@@ -24,8 +24,8 @@
   "darkTheme": "Темная тема",
   "tiraspol": "Тирасполь",
   "rybnitsa": "Рыбница",
-  "dubosary": "Рыбница",
-  "grigariopol": "Григориополь",
+  "dubosary": "Дубосары",
+  "grigariopol": "Григорипка",
   "all": "Все",
   "my": "Мои",
   "searchPost": "Поиск объявлений",
